--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   	
 		<div id="menu" >
 		
-			<a href="Index.html">HOME</a> | 
+			<a href="index.html">HOME</a> | 
 			<a href="lore.html">LORE</a> | 
 			<a href="equipment.html">EQUIPMENT</a> |
 			<a href="stats.html">STATS</a> |
